tests/errors/lexing/unterminated_block_comment.c
// Unterminated block comment
void main()
{}

/*
